k8s/server/server.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    reloader.stakater.com/auto: "true"
  labels:
    app: server
  name: server
  namespace: kmotion
spec:
  replicas: 3
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
      name: server
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: server
        image: ghcr.io/thomas-gleizes/kmotion:latest
        imagePullPolicy: Always
        name: server
        ports:
        - containerPort: 80
          protocol: TCP
      restartPolicy: Always
