k8s/server/server.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: kmotion
  labels:
    app: server
spec:
  selector:
    app: server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
