k8s/server/server.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: server
  namespace: kmotion
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - kmotion.thomasgleizes.fr
      secretName: kmotion-tls
  rules:
    - host: kmotion.thomasgleizes.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: server
                port:
                  number: 80
